# exercise_on_c

./: README.md
access_to_site/: CMakeLists.txt  input.txt  main.c  test.c  test.h  user_list.h  user_operation.c  user_operation.h
matrix/: CMakeLists.txt  main.c  matrix.c  matrix.h  test.c  test.h
online_cinema/: CMakeLists.txt  cinema.c  cinema.h  film.h  film_operation.c  film_operation.h  films.txt  main.c  user.h  user.txt  user_operation.c  user_operation.h  view.c  view.h
queue_in_shop/: CMakeLists.txt  coords.h  draw.c  draw.h  main.c  operation_shop_struct.c  operation_shop_struct.h  settings.txt  shop_queue_model.c  shop_queue_model.h  shop_struct.h
